@@ -75,21 +75,20 @@ public class SetCommand extends PluginCommand {
   }
 
   public void execute(CommandSender sender) throws CommandArgumentException, CommandUsageException, CommandPermissionException {
-    boolean set = false;
     this.location = ((Player) sender).getLocation(); 
     
     if (sender.hasPermission(this.getPermission(1)) && this.playerName.equalsIgnoreCase(sender.getName())) {
       this.createHome();
       sender.sendMessage(ChatColor.GREEN + this.plugin.getMessage("home-set"));
-      set = true;
-    } else {
+      return;
+    } else if (this.playerName.equalsIgnoreCase(sender.getName())) {
       throw new CommandPermissionException(null, this.getPermission(1));
     }
     
-    if (sender.hasPermission(this.getPermission(2)) && !this.playerName.equalsIgnoreCase(sender.getName()) && !set) {
+    if (sender.hasPermission(this.getPermission(2)) && !this.playerName.equalsIgnoreCase(sender.getName())) {
       this.createHome();
       sender.sendMessage(ChatColor.GREEN + this.plugin.getSimpleFormattedMessage("home-set-others", this.playerName));
-    } else {
+    } else if (!this.playerName.equalsIgnoreCase(sender.getName())) {
       throw new CommandPermissionException(null, this.getPermission(2));
     }
 
