@@ -56,9 +56,9 @@ teleportcommand-ignore-cooldown-permission-description: Allow this player to ign
 cooldown-not-expired: You may not teleport for another {0}.
 
 no-home-set: {0} does not have a home yet.
-teleported-home: Teleported to {0}'s home.
+teleported-home: Teleported to the home belonging to {0}.
 can-only-teleport-to-own-home: You may only teleport to your own home.
 
 invalid-world: The world you specified does not exist!
-invalid-world-hint: You may only use worlds which are currently loaded.
+world-must-be-loaded: You may only use worlds which are currently loaded.
 
